ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserContinueStatement1.d/input.ts.stderr
error: A 'continue' statement can only jump to a label of an enclosing iteration statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserContinueStatement1.d/input.ts:1:1
  |
1 | continue;
  | ^^^^^^^^^

